fix work--3 alignment

--- a/main.css
+++ b/main.css
@@ -476,7 +476,6 @@ section.works {
 
 @media screen and (max-width: 950px) {
   .work--3 {
-    width: 427px;
     display: flex;
     flex-direction: column;
     margin-top: -2rem;
